# habit_tracker

./: .env.example  .gitignore  README.md  data.json  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
docs/: docs.py
habit/: admin.py  models.py  paginators.py  permission.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py
users/: models.py  tests.py  urls.py
users/management/commands/: csu.py  cu.py
users/migrations/: 0001_initial.py
users/serializers/: jwt.py  users.py
users/views/: jwt.py  users.py
