[tool.poetry]
name = "habit_tracker"
version = "1.0.3"
description = ""
authors = ["V. Petrenko"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
